fix: improve dark theme heading contrast

--- a/styles/global.css
+++ b/styles/global.css
@@ -26,6 +26,10 @@ body {
   font-family: 'Futura PT', sans-serif;
 }
 
+.dark .text-primary {
+  color: rgb(203 213 225 / 1) !important;
+}
+
 blockquote {
   border-left: 4px solid #7a5151 !important;
   margin-bottom: 5px;
